<resources>
    <string name="app_name">Keeping Cool</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_posts">Keeping Cool Forum</string>
    <string name="title_activity_list_post_view">Keeping Cool Forum</string>
    <string name="post_body_hint">What\'s on your mind?</string>
    <string name="post_title_hint">Give your post a title!</string>
    <string name="post_button">Post</string>
    <string name="update_button">Submit Update</string>
    <string name="title_activity_create_post">Create post</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout_button">Logout</string>
    <string name="post_delete_button">Delete</string>
    <string name="messenger">Messenger</string>
    <string name="numberOfUpvotes">No votes</string>
    <string name="title_activity_show_post">ShowPostActivity</string>
    <string name="comment_button">Post Comment</string>
    <string name="title_activity_comment_post">Create post</string>
    <string name="chip_fashion">Fashion</string>
    <string name="chip_waste">Waste</string>
    <string name="chip_oceans">Oceans</string>
    <string name="chip_rainforests">Rainforests</string>
    <string name="chip_carbon">Carbon</string>
    <string name="chip_diet">Diet</string>
    <string name="personalDetails">Personal Details:</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="displayNameHint">Display Name</string>
    <string name="aboutMeHint">About Me</string>
    <string name="saveProfile">Save</string>

    <string-array name="items">
        <item>Avocado</item>
        <item>Tomato</item>
        <item>Spinach</item>
        <item>Mushroom</item>
    </string-array>

</resources>

